# python-cambium-cnmaestro

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  cambium-cnmaestro-6.1.0-bundled.yaml  pyproject.toml
.agents/: README.md
.agents/memory/: python-cambium-cnmaestro-repository-memory.md
.cursor/memory/: README.md  python-cambium-cnmaestro-repository-memory.md
.cursor/rules/: memory-bootstrap.mdc
.github/workflows/: ci.yml
cambium_cnmaestro/: __init__.py  auth.py  client.py  errors.py  http.py  paging.py  results.py
cambium_cnmaestro/operations/: cli.py  cnmatrix_interfaces.py  cnmatrix_lldp.py
cambium_cnmaestro/resources/: cnmatrix.py  devices.py  jobs.py  networks.py  sites.py  wifi_enterprise.py
cambium_cnmaestro/textfsm_templates/: __init__.py  cnmatrix_show_interfaces.textfsm  cnmatrix_show_lldp_neighbors_detail.textfsm
docs/: AGENTS.md  INDEX.md  endpoint-checklist.md
docs/adr/: 0001-repo-structure-to-date.md
src/cambium_cnmaestro/: __init__.py  client.py
src/cambium_cnmaestro/resources/: cnmatrix.py  devices.py  networks.py  sites.py  wifi_enterprise.py
tests/: test_cnmatrix_interface_parse.py  test_cnmatrix_ports.py  test_devices_interface_macs.py  test_devices_operations.py  test_jobs_operations.py  test_networks_operations.py  test_paging.py  test_sites_operations.py  test_switch_groups_operations.py  test_wifi_enterprise_operations.py
