[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cambium-cnmaestro"
version = "0.1.2"
description = "Python SDK for Cambium cnMaestro"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "NetAuto" }]
dependencies = [
  "httpx>=0.27.0",
  "textfsm>=1.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-httpx>=0.30.0",
  "black>=26.1.0",
  "flake8>=7.1.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cambium_cnmaestro = ["textfsm_templates/*.textfsm"]

[tool.setuptools.packages.find]
include = ["cambium_cnmaestro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
exclude = [
  "^tests/*",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
